src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Files_Tested__c</fullName>
        <label>Files Tested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DER</fullName>
                </value>
                <value>
                    <fullName>DELQQ</fullName>
                </value>
                <value>
                    <fullName>DEMOG</fullName>
                </value>
                <value>
                    <fullName>Private / Ins. Loan</fullName>
                </value>
                <value>
                    <fullName>Nelnet</fullName>
                </value>
                <value>
                    <fullName>SLMA</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>ACS</fullName>
                </value>
                <value>
                    <fullName>AES</fullName>
                </value>
                <value>
                    <fullName>PHEAA</fullName>
                </value>
                <value>
                    <fullName>Citibank</fullName>
                </value>
                <value>
                    <fullName>Student Loan Express</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>Mohela</fullName>
                </value>
                <value>
                    <fullName>ECSI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Count_Down_Number__c</fullName>
        <description>This field holds the final number of days it took for the implementation to change from WIP status/complete.</description>
        <label>Final Count Down Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Literacy_Buy_off__c</fullName>
        <label>Financial Education Buy-off</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIP</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Folder_Setup_Completion_Date__c</fullName>
        <description>The date the Folder Setup is complete</description>
        <label>Folder Setup Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Global_Contact_Exclusions__c</fullName>
        <label>Global Contact Exclusions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No Print  Cathleen Kellogg</fullName>
                </value>
                <value>
                    <fullName>No Email  Cathleen Kellogg</fullName>
                </value>
                <value>
                    <fullName>No Outbound Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Notes__c</fullName>
        <label>Implementation Notes:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Progress__c</fullName>
        <formula>IF( ISPICKVAL( Logo_Specs_Status__c, &apos;Published&apos;) , 0.2, 0) 
+ 
IF( ISBLANK( EDMS_Activated__c ) , 0, 0.2) 
+ 
IF( ISPICKVAL( Demog_File_Status__c , &apos;Complete&apos;) , 0.2, 
IF(ISPICKVAL(Demog_File_Status__c , &apos;Validated&apos;), 0.13, 
IF(ISPICKVAL(Demog_File_Status__c , &apos;Testing&apos;), 0.07, 
IF(ISPICKVAL(Demog_File_Status__c , &apos;WIP&apos;), 0,0)))) 
+ 
IF( ISPICKVAL(NSLDS_Access_Status__c, &apos;6 - Received SAIG Access&apos;) , 0.2, 
IF(ISPICKVAL(NSLDS_Access_Status__c , &apos;1 - School Provided&apos;), 0.2, 
IF(ISPICKVAL(NSLDS_Access_Status__c , &apos;5 - ASA Returns to SAIG&apos;), 0.16, 
IF(ISPICKVAL(NSLDS_Access_Status__c , &apos;4 - ASA Rcvd User Docs&apos;), 0.12, 
IF(ISPICKVAL(NSLDS_Access_Status__c , &apos;3 - Bus Analysis NPI Provided&apos;), 0.08, 
IF(ISPICKVAL(NSLDS_Access_Status__c , &apos;2 - Confidentiality Auth Form Rcvd&apos;), 0.04,0)))))) 
+ 
IF( AND( NOT(ISBLANK( SALT_Profile_Creation_Date__c )) ,ISPICKVAL( MM_101_Customization_Set_Up_Status__c , &apos;Complete&apos;)) , 0.2, 
IF( OR( NOT(ISBLANK( SALT_Profile_Creation_Date__c )) ,ISPICKVAL( MM_101_Customization_Set_Up_Status__c , &apos;Complete&apos;)), 0.10, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Implementation_Training__c</fullName>
        <label>Implementation Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Activation_Call__c</fullName>
        <label>Initial Engagement Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Implementation_Call__c</fullName>
        <description>Date Initial Implementation Call Occurs</description>
        <label>Initial Implementation Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Internal_Implementation_Meeting__c</fullName>
        <label>Initial Internal Implementation Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiative_Schedules__c</fullName>
        <label>Initiative Schedules</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIP</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initiatives__c</fullName>
        <label>Initiatives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intro</fullName>
                </value>
                <value>
                    <fullName>Repayment</fullName>
                </value>
                <value>
                    <fullName>Delinquency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoicing_Profile__c</fullName>
        <label>Invoicing Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIP</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoicing_Set_up_Form__c</fullName>
        <description>Customer Setup Invoicing Form, required for Customer setup in Lawson for Invoicing.</description>
        <label>Invoicing Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIP</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Inbound_Message__c</fullName>
        <description>Read-only Date/time field populated by workflow each time a new inbound email message is received.</description>
        <label>Last Inbound Message</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lender_Code_Conf_Status__c</fullName>
        <label>Lender Code Conf Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIP</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sub</fullName>
                </value>
                <value>
                    <fullName>Unsub</fullName>
                </value>
                <value>
                    <fullName>PLUS</fullName>
                </value>
                <value>
                    <fullName>Grad PLUS</fullName>
                </value>
                <value>
                    <fullName>Perkins</fullName>
                </value>
                <value>
                    <fullName>MA - NIL</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logo_Specs_Sent__c</fullName>
        <label>Logo Specs Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Logo_Specs_Status__c</fullName>
        <label>Logo Specs Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logo_Submitted__c</fullName>
        <description>Date the logo was submitted to marketing.</description>
        <label>Logo Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Logos_Received__c</fullName>
        <label>Logos Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MM101_Buy_off__c</fullName>
        <label>SALT Courses Buy off</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIP</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MM_101_Customization_Call__c</fullName>
        <label>SALT Courses Customization Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MM_101_Customization_Set_Up_Status__c</fullName>
        <label>SALT Courses Customization Set Up Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MM_101_Demo_Date__c</fullName>
        <label>SALT Courses Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MM_101_Staging_Status__c</fullName>
        <label>SALT Courses Staging Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPN_Serialization_Status__c</fullName>
        <label>MPN Serialization Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIP</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPN_Serialization__c</fullName>
        <label>MPN Serialization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPN_Serialization_link__c</fullName>
        <label>Serialization Parent Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Moment_of_Truth_Cohorts__c</fullName>
        <label>Moment of Truth Cohorts</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_Campus_Codes__c</fullName>
        <inlineHelpText>Please enter the various OE branch codes that comprise the multi-campuses of SALT.</inlineHelpText>
        <label>Multi-Campus Codes</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Campuses__c</fullName>
        <label>Multiple Campuses</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_Money_101_Courses__c</fullName>
        <label>SALT Courses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Banking Basics</fullName>
                </value>
                <value>
                    <fullName>Budgeting</fullName>
                </value>
                <value>
                    <fullName>Credit Cards</fullName>
                </value>
                <value>
                    <fullName>Credit Score</fullName>
                </value>
                <value>
                    <fullName>Identity Theft</fullName>
                </value>
                <value>
                    <fullName>Financial Aid</fullName>
                </value>
                <value>
                    <fullName>Student Loans</fullName>
                </value>
                <value>
                    <fullName>Repayment Options</fullName>
                </value>
                <value>
                    <fullName>Financial Goals</fullName>
                </value>
                <value>
                    <fullName>Entrance Counseling</fullName>
                </value>
                <value>
                    <fullName>Grad level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NSLDS_Access_Status_Date__c</fullName>
        <description>Date NSLDS Access was created.</description>
        <label>NSLDS Access Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NSLDS_Access_Status__c</fullName>
        <label>NSLDS Access Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - School Provided</fullName>
                </value>
                <value>
                    <fullName>2 - Confidentiality Auth Form Rcvd</fullName>
                </value>
                <value>
                    <fullName>3 - Bus Analysis NPI Provided</fullName>
                </value>
                <value>
                    <fullName>4 - ASA Rcvd User Docs</fullName>
                </value>
                <value>
                    <fullName>5 - ASA Returns to SAIG</fullName>
                </value>
                <value>
                    <fullName>6 - Received SAIG Access</fullName>
                </value>
                <value>
                    <fullName>7 - Access Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NSLDS_Authorization_Sent__c</fullName>
        <label>NSLDS Auth Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Need_for_campus_meeting__c</fullName>
        <label>Need for campus meeting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need_for_materials__c</fullName>
        <label>Need for materials</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need_for_sponsorship_assistance__c</fullName>
        <label>Need for sponsorship assistance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Netforum_Profile_Creation_Date__c</fullName>
        <description>The date that the netforum (avectra) profile is complete.</description>
        <label>Netforum Profile Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Message_Indicator__c</fullName>
        <description>If &quot;New Message Received&quot; is true this will show a red flag.</description>
        <formula>IF(New_Message_Received__c = TRUE,
IMAGE(&quot;https://c.na26.content.force.com/servlet/servlet.ImageServer?id=01532000001pTaQ&amp;oid=00D300000000ufT&amp;lastMod=1489646535000&quot;,&quot;red flag&quot;,30,30),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Message Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Message_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a checkbox controlled by workflow.  It is set to true on a new inbound emailmessage (whether from the customer or anyone else), and set to false by sending an outbound message or marking the case resolved.</description>
        <label>New Message Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ODS_ID__c</fullName>
        <label>ODS ID:</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Link__c</fullName>
        <label>Opportunity Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Original_Go_Live_Date__c</fullName>
        <label>Original Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PGP_Email_Setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PGP Email Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PGP_Set_Up_Date__c</fullName>
        <label>PGP Set Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PGP_Set_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PGP Set Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_Offerings__c</fullName>
        <label>PS Offerings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Webex</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Code__c</fullName>
        <label>Parent Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_Based_Fees__c</fullName>
        <label>Performance Based Fees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>President_Call__c</fullName>
        <label>President Call</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIP</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>President_s_Welcome_Call__c</fullName>
        <label>President&apos;s Welcome Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>President_s_Welcome_Letter_Sent__c</fullName>
        <label>President&apos;s Welcome Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_Id__c</fullName>
        <label>Previous Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_Name_Support__c</fullName>
        <formula>Owner:Queue.QueueName +Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Owner Name Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_Name__c</fullName>
        <label>Previous Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <description>Used to store previous value of the case owner.</description>
        <formula>IF( LEFT(Previous_Owner_Id__c, 3) == &apos;00G&apos; , 
     HYPERLINK(&quot;p/own/Queue/d?id=&quot;+Previous_Owner_Id__c,  Previous_Owner_Name__c ),
     HYPERLINK(&quot;/&quot;+Previous_Owner_Id__c,  Previous_Owner_Name__c )
)</formula>
        <label>Previous Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Conversation__c</fullName>
        <label>Price Conversation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Profile_Creation_Status__c</fullName>
        <label>Profile Creation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIP</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profile_Creation_date__c</fullName>
        <label>Profile Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_Tile_Published__c</fullName>
        <description>Date promo tile was published.</description>
        <label>Promo Tile Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_Tile_Status__c</fullName>
        <label>Promo Tile Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promo_Tile_Submitted__c</fullName>
        <description>Date the promo tile was submitted to product management.</description>
        <label>Promo Tile Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_For_First_Contact__c</fullName>
        <description>This field will allow an agent to select the reason(s) why the customer first called in.</description>
        <label>Reason For Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>College Planning/Paying For College</fullName>
                </value>
                <value>
                    <fullName>Consolidation and Refinance</fullName>
                </value>
                <value>
                    <fullName>Resolving Delinquent Student Loans</fullName>
                </value>
                <value>
                    <fullName>Forgiveness For Student Loans</fullName>
                </value>
                <value>
                    <fullName>General Student Loan Repayment</fullName>
                </value>
                <value>
                    <fullName>General Financial Information (Budgeting, Credit, Saving, etc.)</fullName>
                </value>
                <value>
                    <fullName>Salt Site Support</fullName>
                </value>
                <value>
                    <fullName>Career Counseling</fullName>
                </value>
                <value>
                    <fullName>Product Enhancement</fullName>
                </value>
                <value>
                    <fullName>College Counseling</fullName>
                </value>
                <value>
                    <fullName>Vocational Path Training</fullName>
                </value>
                <value>
                    <fullName>Apprenticeships</fullName>
                </value>
                <value>
                    <fullName>Career Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reassignment_Reason__c</fullName>
        <description>Please provide a reason as to why a case is being reassigned.</description>
        <label>Reassignment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Skillset</fullName>
                </value>
                <value>
                    <fullName>Out of Office</fullName>
                </value>
                <value>
                    <fullName>Manager Reassignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repayment_Cohorts__c</fullName>
        <label>Repayment Cohorts</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reports__c</fullName>
        <label>Reports</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Communication Results</fullName>
                </value>
                <value>
                    <fullName>Portfolio Profile</fullName>
                </value>
                <value>
                    <fullName>Risk Analysis</fullName>
                </value>
                <value>
                    <fullName>Portfolio Management</fullName>
                </value>
                <value>
                    <fullName>Projected CDR</fullName>
                </value>
                <value>
                    <fullName>Portfolio Details</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>